tests/negative/gold/import_show2_test.gold
tests/negative/import_show2_test.toit:8:3: error: Unresolved identifier: 'b'
  b  // Unresolved.
  ^
Compilation failed.
